tests/ui/consts/const-mut-refs/feature-gate-const_mut_refs.stderr
error[E0658]: mutable references are not allowed in constant functions
  --> $DIR/feature-gate-const_mut_refs.rs:5:14
   |
LL | const fn foo(x: &mut i32) -> i32 {
   |              ^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
